--- a/Substitutions.ipynb
+++ b/Substitutions.ipynb
@@ -3333,7 +3333,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f4125eba",
+   "id": "51ff1aef",
    "metadata": {},
    "outputs": [
     {
@@ -3529,7 +3529,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3777727f",
+   "id": "c251bbdd",
    "metadata": {},
    "outputs": [
     {
@@ -3550,7 +3550,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "a42afc94",
+   "id": "7bc39bbf",
    "metadata": {},
    "outputs": [
     {
@@ -3571,7 +3571,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "8ebd49cc",
+   "id": "7308185a",
    "metadata": {},
    "outputs": [
     {
@@ -3592,7 +3592,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "01a73b3a",
+   "id": "9f76ebac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3618,7 +3618,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "1ae14333",
+   "id": "d7216747",
    "metadata": {
     "scrolled": true
    },
@@ -3628,7 +3628,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "5c7f3a9e",
+   "id": "ffaf8e82",
    "metadata": {},
    "outputs": [
     {
@@ -3795,7 +3795,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "541db104",
+   "id": "586b8be3",
    "metadata": {},
    "outputs": [
     {
@@ -3856,7 +3856,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "ac54048d",
+   "id": "04fcdc22",
    "metadata": {},
    "outputs": [
     {
@@ -3888,7 +3888,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "571fd60f",
+   "id": "9b693e60",
    "metadata": {},
    "outputs": [
     {
@@ -3920,7 +3920,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "fdd89179",
+   "id": "ceeb2f63",
    "metadata": {},
    "outputs": [
     {
@@ -4233,7 +4233,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "a7ad3ce3",
+   "id": "b140dc13",
    "metadata": {},
    "outputs": [
     {
@@ -4266,7 +4266,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "a502d697",
+   "id": "a802e1c6",
    "metadata": {},
    "outputs": [
     {
@@ -4287,7 +4287,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "f50977ea",
+   "id": "43d10c6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4314,7 +4314,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "f2d31cd2",
+   "id": "79014ff3",
    "metadata": {},
    "outputs": [
     {
@@ -4375,7 +4375,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "8f709405",
+   "id": "0e7a85f6",
    "metadata": {},
    "outputs": [
     {
@@ -4519,16 +4519,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a5a3bb59",
+   "execution_count": 203,
+   "id": "8145fc9b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'timedelta' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [203]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtimedelta\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'timedelta' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "timedelta"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9f55ce",
+   "id": "eacb9216",
    "metadata": {},
    "outputs": [],
    "source": []
