Pictures for opponents

--- a/notebooks/Substitutions_exploration.ipynb
+++ b/notebooks/Substitutions_exploration.ipynb
@@ -3854,7 +3854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 33,
    "id": "f85d60c0",
    "metadata": {},
    "outputs": [],
@@ -3881,7 +3881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 36,
    "id": "bac0291b",
    "metadata": {},
    "outputs": [
@@ -3919,7 +3919,7 @@
        "      <td>6818</td>\n",
        "      <td>1.331392</td>\n",
        "      <td>1</td>\n",
-       "      <td>98.0</td>\n",
+       "      <td>93.0</td>\n",
        "      <td>Hayley Emma Raso</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3928,10 +3928,10 @@
       ],
       "text/plain": [
        "    player.id  obv_total_net  Fouls Committed  minutes       player_name\n",
-       "11       6818       1.331392                1     98.0  Hayley Emma Raso"
+       "11       6818       1.331392                1     93.0  Hayley Emma Raso"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4087,7 +4087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 37,
    "id": "f94d3d32",
    "metadata": {},
    "outputs": [
@@ -4125,7 +4125,7 @@
        "      <td>15570</td>\n",
        "      <td>3.972624</td>\n",
        "      <td>4</td>\n",
-       "      <td>454.0</td>\n",
+       "      <td>453.0</td>\n",
        "      <td>Chloe Kelly</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -4134,16 +4134,17 @@
       ],
       "text/plain": [
        "    player.id  obv_total_net  Fouls Committed  minutes  player_name\n",
-       "30      15570       3.972624                4    454.0  Chloe Kelly"
+       "30      15570       3.972624                4    453.0  Chloe Kelly"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total[total['player_name'] == 'Chloe Kelly']"
+    "total[total['player_name'] == 'Chloe Kelly']\n",
+    "#total"
    ]
   },
   {
@@ -4199,7 +4200,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5416eaa8",
+   "id": "f0c0f1de",
    "metadata": {},
    "outputs": [
     {
@@ -4587,7 +4588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d2d44d",
+   "id": "15bd8ea2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4595,7 +4596,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0a8473cc",
+   "id": "743018d3",
    "metadata": {},
    "outputs": [
     {
@@ -4631,7 +4632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1d4ba7",
+   "id": "fb49ca53",
    "metadata": {},
    "outputs": [],
    "source": []
