--- a/notebooks/Substitutions_exploration.ipynb
+++ b/notebooks/Substitutions_exploration.ipynb
@@ -4200,7 +4200,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f0c0f1de",
+   "id": "d2a575e5",
    "metadata": {},
    "outputs": [
     {
@@ -4588,7 +4588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bd8ea2",
+   "id": "73d38b3b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4596,7 +4596,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "743018d3",
+   "id": "8ae91453",
    "metadata": {},
    "outputs": [
     {
@@ -4631,8 +4631,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "0321081f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            Manchester City WFC\n",
+       "1                    Arsenal WFC\n",
+       "2            Manchester City WFC\n",
+       "3                    Arsenal WFC\n",
+       "4            Manchester City WFC\n",
+       "                  ...           \n",
+       "21327        Manchester City WFC\n",
+       "21328        Manchester City WFC\n",
+       "21329        Manchester City WFC\n",
+       "21330        Manchester City WFC\n",
+       "21331    Tottenham Hotspur Women\n",
+       "Name: team.name, Length: 21332, dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events['team.name']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fb49ca53",
+   "id": "868ad53f",
    "metadata": {},
    "outputs": [],
    "source": []
