--- a/notebooks/Substitutions_exploration.ipynb
+++ b/notebooks/Substitutions_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "243550d2",
+   "id": "cd4fc6db",
    "metadata": {},
    "source": [
     "### Loading the data"
@@ -2979,7 +2979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47a2edf7",
+   "id": "72138264",
    "metadata": {},
    "source": [
     "### Model not retained"
@@ -3067,7 +3067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3df5556",
+   "id": "80601a0f",
    "metadata": {},
    "source": [
     "Technical assumptions: we assume we have data flux every minute."
@@ -3276,10 +3276,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5353367d",
+   "id": "6ec92264",
    "metadata": {},
    "source": [
-    "### ManCity players position and aggregated statistics"
+    "### ManCity players position"
    ]
   },
   {
@@ -3477,7 +3477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bdac1a3",
+   "id": "cf8e19db",
    "metadata": {},
    "source": [
     "### Players aggregated statistics"
@@ -3729,7 +3729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f96e95c",
+   "id": "2bcb2916",
    "metadata": {},
    "source": [
     "## Looking at OBV over time"
@@ -3777,7 +3777,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c1d3e18b",
+   "id": "06c686dc",
    "metadata": {},
    "outputs": [
     {
@@ -3813,7 +3813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389bdafc",
+   "id": "bd26d972",
    "metadata": {},
    "outputs": [],
    "source": []
