--- a/notebooks/Substitutions_exploration.ipynb
+++ b/notebooks/Substitutions_exploration.ipynb
@@ -1823,7 +1823,7 @@
    ],
    "source": [
     "print(len(subs))\n",
-    "# 40 pour 6 matchs : 6.6 changements par matchs\n",
+    "# 40 pour 6 matchs : 6.6 changements par match\n",
     "\n",
     "subs[['match_id', 'index', 'minute', 'second', 'team.id', 'opponent.id',\n",
     "      'GF', 'GA', 'GD', 'status',\n",
